# .slut-programing

./: .gitignore  .taurignore  Building  Cargo.toml  IMPROVEMENTS_IMPLEMENTED.md  ITERATION_IMPLEMENTATION_SUMMARY.md  Improvement_Plan.txt  LOOP_QUICK_REFERENCE.md  Mathematical  New Text Document.txt  New implementations.txt  Next  Removing  Slut_101.txt  Starting  Tauri_Integration_guide.txt  Tauri_run.bat  Technical Status Report.txt  asteroids_complete.slut  build.slut  clean.bat  consumer.slut  function_synthesis_cache.json  game.bat  gitPush.bat  goals and current.txt  improvement_plan.txt  making_iteration.txt  making_memory.txt  making_selection.txt  mathBetter.txt  math_target_seaking.txt  output.txt  package-lock.json  package.json  plan.txt  poly.slut  quantum_consciousness_breakthrough.txt  quantum_consciousness_cache.json  quantum_consciousness_cache_backup.json  (+22 more)
functions/: Cargo.toml
functions - Copy/src/: lib.rs
functions/src/: lib.rs  loopbuilder.rs  mathprocessor.rs  patternfinder.rs  sharedloop.rs  smartloop.rs
globes/: PROJECT_OVERVIEW.txt  README.md  copy-js-simple.js  globe-editor-v2.html  globe-editor-v2.js  oop-visualizer-contribution.js  oop-visualizer-frontend-module.js  oop-visualizer-widget.js  package.json  test-widget-standalone.html
src/: condition_evaluator.rs  equation_solver.rs  function_builder.rs  function_executor.rs  game_generator.rs  interactive_engine.rs  lib.rs  loop_executor.rs  main.rs  math_engine.rs  target_seeker.rs  tauri_commands.rs  variable_manager.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/functions/: Cargo.toml
src-tauri/functions/src/: lib.rs
src-tauri/src/: main.rs
src/memory/: binary_cache.rs  bloom_filter.rs  compact_solution.rs  mod.rs  partitioned_index.rs  tiered_cache.rs
ui/: index.html
ui/js/: app.js  globe-engine.js
