[package]
name = "quantum_slut_transpiler"
version = "0.4.0"
edition = "2021"

[lib]
name = "quantum_slut_transpiler"
path = "src/lib.rs"

[[bin]]
name = "quantum"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"

# Phase 1: Core improvements
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.8"
evalexpr = "11.3"

# Memory optimization dependencies
bincode = "1.3"
memmap2 = "0.9"
lru = "0.12"
bitvec = { version = "1.0", features = ["serde"] }
ordered-float = { version = "4.2", features = ["serde"] }

# Phase 1: CLI improvements
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"

# Tauri dependencies
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all"] }
tokio = { version = "1", features = ["full"] }

[features]
default = []
enhanced = []
interactive = []
game_generation = []