[package]
name = "quantum_slut_transpiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quantum"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"